# gpu-by-example

./: .clang-format  .gitignore  .gitmodules  GpuByExample.sln  README.md
Chapter1-GettingStarted/: CMakeLists.txt  Chapter1-GettingStarted.vcxproj
Chapter1-GettingStarted/Chapter1-GettingStarted.xcodeproj/: project.pbxproj
Chapter2-DrawingPrimitives/: CMakeLists.txt  Chapter2-DrawingPrimitives.vcxproj
Chapter2-DrawingPrimitives/Chapter2-DrawingPrimitives.xcodeproj/: project.pbxproj
Chapter2-DrawingPrimitives/Resources/: SingleTriangle.frag.dxil  SingleTriangle.frag.hlsl  SingleTriangle.frag.spv  SingleTriangle.vert.dxil  SingleTriangle.vert.hlsl  SingleTriangle.vert.spv
Chapter2-DrawingPrimitives/Shaders/: Color.frag.hlsl  Color.frag.msl  PositionColor.vert.glsl  PositionColor.vert.msl
Chapter2-DrawingPrimitives/Source/: AppContext.c  Shaders.c  Shaders.h  main.c
Chapter3-Uniforms/: CMakeLists.txt  Chapter3-Uniforms.vcxproj
Chapter3-Uniforms/Chapter3-Uniforms.xcodeproj/: project.pbxproj
Chapter3-Uniforms/Resources/: RotatingTriangle.msl
Chapter3-Uniforms/Shaders/: RotatingTriangle.vert.glsl  RotatingTriangle.vert.msl  RotatingTriangle.vert.spv
Chapter3-Uniforms/Source/: AppContext.c  AppContext.h  GBE_3DMath.c  GBE_3DMath.h  GBE_Shaders.c  Shaders.c  main.c
Chapter3/GpuByExample-Chapter3.xcodeproj/: project.pbxproj
Chapter3/Source/: AppContext.c  Shaders.h  main.c
Example1-GettingStarted/: CMakeLists.txt  Example1-GettingStarted.vcxproj
Example1-GettingStarted/Example1-GettingStarted.xcodeproj/: project.pbxproj
Example1-GettingStarted/Source/: Example1.c
Example2-DrawingPrimitives/: CMakeLists.txt  Example2-DrawingPrimitives.vcxproj
Example2-DrawingPrimitives/Example2-DrawingPrimitives.xcodeproj/: project.pbxproj
Example2-DrawingPrimitives/Resources/: Color.frag.glsl  Color.frag.msl  PositionColor.vert.dxil  PositionColor.vert.glsl  PositionColor.vert.msl  PositionColor.vert.spv
Example2-DrawingPrimitives/Shaders/: Color.frag.glsl  PositionColor.vert.hlsl  PositionColor.vert.spv
Example2-DrawingPrimitives/Source/: AppContext.c  Example2.c
Example3-Uniforms/: CMakeLists.txt  Example3-Uniforms.vcxproj  SpinningCube.vert.dxil  SpinningCube.vert.spv
Example3-Uniforms/Example3-Uniforms.xcodeproj/: project.pbxproj
Example3-Uniforms/Resources/: RotatingTriangle.vert.dxil  RotatingTriangle.vert.hlsl  SpinningCube.vert.dxil  SpinningCube.vert.glsl  SpinningCube.vert.hlsl  SpinningCube.vert.msl  SpinningCube.vert.spv
Example3-Uniforms/Shaders/: Color.frag.dxil  SpinningCube.metal
Example3-Uniforms/Source/: AppContext.h  Example3.c  GBE_Shaders.c
GBECommon/: CMakeLists.txt  GBECommon.vcxproj  GBECommon.vcxproj.filters
GBECommon/GBECommon.xcodeproj/: project.pbxproj
GBECommon/Include/GBECommon/: GBE_3DMath.h  GBE_Context.h  GBE_Init.h  GBE_Shaders.h
GBECommon/Source/: GBE_3DMath.c  GBE_Init.c  GBE_Shaders.c
GpuByExample.xcodeproj/: project.pbxproj
GpuByExample.xcworkspace/: contents.xcworkspacedata
Libraries/SDL3.xcframework/: Info.plist
Libraries/SDL3.xcframework/ios-arm64/SDL3.framework/: Info.plist  SDL3
Libraries/SDL3.xcframework/ios-arm64_x86_64-simulator/SDL3.framework/: Info.plist  SDL3
Libraries/SDL3.xcframework/ios-arm64_x86_64-simulator/SDL3.framework/_CodeSignature/: CodeResources
Libraries/SDL3.xcframework/macos-arm64_x86_64/SDL3.framework/Versions/A/Resources/: Info.plist
Libraries/SDL3.xcframework/macos-arm64_x86_64/SDL3.framework/Versions/A/_CodeSignature/: CodeResources
Libraries/SDL3.xcframework/tvos-arm64/SDL3.framework/: Info.plist  SDL3
Libraries/SDL3.xcframework/tvos-arm64_x86_64-simulator/SDL3.framework/: Info.plist  SDL3
Libraries/SDL3.xcframework/tvos-arm64_x86_64-simulator/SDL3.framework/_CodeSignature/: CodeResources
Part0/: CMakeLists.txt  Part0.vcxproj
Part0/GpuByExample-Part0.xcodeproj/: project.pbxproj
Part0/Source/: main.c
Part1/GpuByExample-Part1.xcodeproj/: project.pbxproj
Part1/Resources/: SingleTriangle.frag.spv  SingleTriangle.vert.hlsl
Part1/Source/: AppContext.h  Shaders.c  Shaders.metal  main.c
Source/: main.c
